Fixup unit tests for updated junit and mokito